--- a/templates/index.html
+++ b/templates/index.html
@@ -136,8 +136,8 @@
                 var cardLanguage = card.getAttribute('data-language');
                 
                 // Vérification des critères de filtrage
-                var categoryMatch = (category === 'all' || cardCategory === category);
-                var languageMatch = (language === 'all' || cardLanguage === language);
+                var categoryMatch = (cardCategory === category);
+                var languageMatch = (cardLanguage === language);
                 
                 // Afficher le site si les deux critères correspondent
                 if (categoryMatch && languageMatch) {
