update debug.py, wordpress.py and debug.html

--- a/templates/debug.html
+++ b/templates/debug.html
@@ -8,7 +8,7 @@
     <form id="debugForm">
         <div class="form-group">
             <label for="domain">Nom de domaine</label>
-            <input type="text" class="form-control" id="domain" name="domain" required>
+            <input type="text" class="form-control" id="domain" name="domain" placeholder="* pour tous les domaines" required>
         </div>
         <div class="form-group">
             <label for="action">Action</label>
