* Improve the UI for the table to take full width

--- a/templates/deployments.html
+++ b/templates/deployments.html
@@ -14,7 +14,7 @@
         <span class="sr-only">Chargement...</span>
     </div>
     <div class="table-responsive" id="deploymentsTableContainer" style="display: none;">
-        <table id="deploymentsTable" class="table table-striped">
+        <table id="deploymentsTable" class="table table-striped w-100">
             <thead>
                 <tr>
                     <th>Domaine</th>
